--- a/style.css
+++ b/style.css
@@ -190,22 +190,26 @@
 }
 
 
-.confirm-photo > div{
+.confirm-photo > img{
+    display: block;
     margin: auto;
 }
 .confirm-photo > p{
     margin-top: 10px;
-  
-
     font-family: 'OpenSans-SemiBold',Arial, Helvetica, sans-serif ;
     font-size: 16px;
     font-weight: 600;
     color: #3024B1;
     text-align: center;
 }
+.confirm-photo > p:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
 .dog-photo{
     width: 164px;
     height: 200px;
+   border-radius: 16px;
     /* background-image: url('images/small-dog.svg'); */
 }
 
@@ -226,9 +230,10 @@
     
 }
 .img-pet{
-   max-width: 164px;
+   width: 164px;
+   height: 200px;
+   border-radius: 16px;
     vertical-align: middle;
-  
 }
 .dc-pet{
     display: inline-block;
@@ -237,8 +242,8 @@
     height: 120px;
     border-radius:0 16px   16px 0 ;
     position: relative;
-    left: -8px;  
-    padding-left: 5px;  
+
+    padding-left: 5px; 
     vertical-align: middle;
 }
 .driver{
@@ -250,12 +255,13 @@
     font-weight: 700;
     font-size: 20px;
     color: rgba(0, 0, 0, 0.57);
-       
+      
 }
 .info-pet{
     font-family: 'OpenSans-Regular',Arial, Helvetica, sans-serif;
     color: rgba(0, 0, 0, 0.57);
     margin: 5px 0;
+     
 }
 
 .info-center{
