--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@
     vertical-align: middle;
     cursor: pointer;
 }
-.img-pet:hover{
+.select-pet:hover{
     border: 3px solid #ffc107;
    
 }
