--- a/style.css
+++ b/style.css
@@ -45,8 +45,16 @@
     margin: auto;
  
 }
+.back{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   
+}
+
 .back > i{
     font-size: 24px;
+   
 }
 .container{
 
@@ -431,3 +439,99 @@
 .back > i:hover{
     color: #ffc107;
 }
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
+
+.mini-logo{
+    z-index: 99;
+}
+.menu{
+    position: relative;
+    top: -32px;
+    left: -20px;
+    border-radius: 20px;
+}
+
+nav {
+    z-index: 1;
+  width: 320px;
+  position: absolute;
+    border-radius: 20px;
+ 
+  color: rgba(0, 0, 0, 0.87);
+  -webkit-clip-path: circle(24px at 30px 24px);
+  clip-path: circle(24px at 32px 24px);
+  -webkit-transition: -webkit-clip-path 0.5625s, clip-path 0.375s;
+  transition: -webkit-clip-path 0.5625s, clip-path 0.375s;
+  transition:  1s;
+}
+#navigator{
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 99;
+    border: none;
+    outline: none;
+   opacity: 0;
+    cursor: pointer;
+}
+#navigator:checked ~ nav{
+    
+    background: #FFBD59;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+  -webkit-transition-duration: 0.75s;
+  transition-duration: 0.75s;
+  -webkit-clip-path: circle(390px at 225px 24px);
+  clip-path: circle(390px at 150px 24px);
+}
+
+a {
+  display: block;
+    border-radius: 10px;
+  line-height: 50px;
+  padding: 0 20px;
+  color: inherit;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+a:hover { background: #ffe082; }
+
+a:active { background: #ffca28; }
+
+.navicon {
+  padding: 33px 20px;
+  position: relative;
+  
+  cursor: pointer;
+  -webkit-transform-origin: 32px 24px;
+  -ms-transform-origin: 32px 24px;
+  transform-origin: 32px 24px;
+}
+
+.navicon div {
+  position: relative;
+  width: 20px;
+  height: 2px;
+  background: rgba(0, 0, 0, 0.87);
+}
+
+.navicon div:before,
+.navicon div:after {
+  display: block;
+  content: "";
+  width: 20px;
+  height: 2px;
+  background: rgba(0, 0, 0, 0.87);
+  position: absolute;
+}
+
+.navicon div:before { top: -7px; }
+
+.navicon div:after { top: 7px; }
